data/derived/sp14/progs/unify/prog1608.ml.out
Characters 137-154:
  (helper l1 l2 [])
  ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
